--- a/back-project/config.html
+++ b/back-project/config.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Administrador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <link rel="stylesheet" href="/ccs/admi.css">
-    <link rel="stylesheet" href="/ccs/estadistica.css">
-    <link rel="stylesheet" href="/ccs/config.css">
+    <link rel="stylesheet" href="/back-project/ccs/admi.css">
+    <link rel="stylesheet" href="/back-project/ccs/estadistica.css">
+    <link rel="stylesheet" href="/back-project/ccs/config.css">
 </head>
 <main class="main">
     <header>
@@ -173,7 +173,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 
 <script src="https://js.stripe.com/v3/"></script>
-<script src="/funciones/api.js" type="module"></script>
+<script src="../back-project/funciones/api.js" type="module"></script>
 <script src="funciones/generarPDF.js" type=""></script>
 <script src="jsPDF-1.3.2\dist\jspdf.min.js"></script>
 <script src="jsPDF-1.3.2\dist"></script>
