se dio estilo al crud

--- a/back-project/administrador.html
+++ b/back-project/administrador.html
@@ -33,7 +33,7 @@
     <div class="panel">
         <h4>Administrador</h4>
       
-          <div class="contenedor container text-center">
+          <div class="contenedor container text-center bg-light">
           <div class="div-formulario"> 
               <form action="#" id="formulario">
                   <input type="text" id="nombre" placeholder="ingresa un nombre">
