--- a/back-project/index.html
+++ b/back-project/index.html
@@ -145,7 +145,7 @@
     <div class="contenedor-footer">
             <div class="footer_One">
                 <h4 class="text-center">Somos Apasionados</h4>
-                    <p>Estamos orgullosos de ser Latinos. Disfrutamos de la diversidad de esta .</p>
+                    <p>Estamos orgullosos de ser Latinos. Disfrutamos de la diversidad de este pais.</p>
             </div>
 
                 <div class="footerTwo">
