--- a/back-project/administrador.html
+++ b/back-project/administrador.html
@@ -7,10 +7,11 @@
     <title>Administrador</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="/back-project/ccs/admi.css">
+
 </head>
 <main class="main">
     <header>
-        <nav class="barra_navegacion">
+        <nav class="barra_navegacion" hidden id="barraNavegacion">
                     <div class="logo"></div>
                     <br>
                     <div class="configuracion">
@@ -31,6 +32,8 @@
     </header>
 
     <div class="panel">
+        <input class="btn-success mostrar" type="button" value="Menu" onclick="mostrarMenu()">
+        <input class="btn-success ocultar" type="button" value="Ocultar Menú" onclick="ocultarMenu()">
         <h4>Administrador</h4>
       
           <div class="contenedor container text-center bg-light">
@@ -58,5 +61,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <script src="/back-project/funciones/ocultar.js"></script>
         <script src="funciones/crud.js"></script>
+        <script src="./funciones/mostrarMenu.js"></script>
   </body>
 </html>
