se agrega personalizacion de login de admi

--- a/login.html
+++ b/login.html
@@ -21,14 +21,14 @@
             <form>
 
               <label>Usuario
-              <input type="text" placeholder="Enter Username">
+              <input type="text" placeholder="Enter Username" id="usuario">
             </label>
 
               <label>Contraseña
-<input type="password" placeholder="Enter Password">
+<input type="password" placeholder="Enter Password" id="clave">
             </label>
 
-              <input type="submit" value="Login">
+              <input type="button" value="Login" onclick="verificar()" >
 
               <a href="#">Olvidastes la Clave</a><br>
               <a href="#">¿No tienes cuenta?</a>
@@ -37,6 +37,6 @@
           <!-- zona de registro -->
           
     </div>
-    
+    <script src="./verificacion.js"></script>
 </body>
 </html>
