--- a/usuarios.html
+++ b/usuarios.html
@@ -152,16 +152,16 @@
             <div class="contenedor">
                 <h2 class="subtitulo text-center">Galeria</h2>
                 <div class="contenedor-galeria">
-                    <img src="img/uso_base_1.jpg" alt="" class="img-galeria">
-                    <img src="img/uso_base_2.jpg" alt="" class="img-galeria">
-                    <img src="img/uso_labial_1.jpg" alt="" class="img-galeria">
-                    <img src="img/uso_labial_2.jpg" alt="" class="img-galeria">
-                    <img src="img/uso_sombras_1.jpg" alt="" class="img-galeria">
-                    <img src="img/uso_sombras_2.jpg" alt="" class="img-galeria">
+                    <img src="img/uso_base_1.jpg" alt="base" class="img-galeria">
+                    <img src="img/uso_base_2.jpg" alt="base" class="img-galeria">
+                    <img src="img/uso_labial_1.jpg" alt="labial" class="img-galeria">
+                    <img src="img/uso_labial_2.jpg" alt="labial" class="img-galeria">
+                    <img src="img/uso_sombras_1.jpg" alt="sombras" class="img-galeria">
+                    <img src="img/uso_sombras_2.jpg" alt="sombras" class="img-galeria">
                 </div>
             </div>
             <section class="imagen-light">
-                <img src="img/cancel_96921.png" alt="" class="close">
+                <img src="img/cancel_96921.png" alt="boton" class="close">
                 <img src="" alt="" class="agregar-imagen">
             </section>
     </main>
