--- a/back-project/estadisticas.html
+++ b/back-project/estadisticas.html
@@ -32,9 +32,11 @@
     </header>
 
         <div class="panel">
+          <div class="btn-menu">
                   <input class="btn-success mostrar" type="button" value="Menu" onclick="mostrarMenu1()">
         <input class="btn-success ocultar" type="button" value="Ocultar Menú" onclick="ocultarMenu1()">
-                <h4>Estadisticas</h4>
+      </div>
+                <h4 class="mt-5">Estadisticas</h4>
                     
                 <div class="container bg-light">
                     <div class="container mt-3">
