--- a/login.html
+++ b/login.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
     <link rel="stylesheet" href="login.css">
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 <body>
@@ -16,7 +17,7 @@
 <!-- 
       zona de logueo -->
         <div class="login-box">
-            <img src="./back-project/img/logo.png" class="avatar" alt="Avatar Image">
+            <img src="./back-project/img/logo.png" class="avatar" alt="logo de una siuleta de un rostro de mujeres con muchos colores">
             <h1>Iniciar Sesión</h1>
             <form>
 
