se sigue acomodando las ramas

--- a/back-project/index.html
+++ b/back-project/index.html
@@ -60,7 +60,7 @@
   </select>
  </div>
  
-
+ <button onclick="whatsapp()" id="whatsapp">wahtsapp</button>
 
 <!--  contenido donde tendra el contenerdor principal con el carrusel y la seccion de quienes somos  -->
  <div class="container-fluid first-content">
@@ -184,5 +184,6 @@
 
 <script src="carusel.js"></script>
 <script src="./funciones/cambiarFondo.js"></script>
+<script src="./funciones/whatsapp.js"></script>
   </body>
 </html>
