se acomoda sesion de usuario

--- a/back-project/index.html
+++ b/back-project/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <link rel="stylesheet" href="Style.css">
+    <link rel="stylesheet" href="../Style.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -25,7 +26,7 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active text-light" aria-current="page" href="#">Maquillaje</a>
+                <a class="nav-link active text-light" aria-current="page" href="../usuarios.html">Maquillaje</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle text-light" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,12 +56,13 @@
 
  <div class="accesibilidad" alt >
   <select name="fondo" id="fondo" onchange="cambiarFondo(this)">
+    <option selected>eliga un color</option>
       <option value="white">blanco</option>
       <option value="black">black</option>
   </select>
  </div>
  
- <button onclick="whatsapp()" id="whatsapp">wahtsapp</button>
+ <button onclick="whatsapp()" id="whatsapp"></button>
 
 <!--  contenido donde tendra el contenerdor principal con el carrusel y la seccion de quienes somos  -->
  <div class="container-fluid first-content">
