--- a/usuarios.html
+++ b/usuarios.html
@@ -4,17 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
+
     <script src="https://kit.fontawesome.com/df59baf6b8.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="usuarios.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/normalize.css@8.0.1/normalize.min.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    
+   
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glider-js@1.7.3/glider.min.css">
+
+
+    <link rel="stylesheet" href="./Style.css">
 
     <title>usuarios</title>
 </head>
 <body>
+
+  
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -48,8 +60,7 @@
                   </li>
                 </ul>
                 <form class="d-flex">
-                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                  <button class="btn btn-outline-success" type="submit">Buscar</button>
+                  <div class="btn btn-outline-success carrito" type="submit"><button id="boton-carrito"><i class="fas fa-shopping-cart"></i><span id="contadorCarrito">0</span></button></div>
                 </form>
               </div>
             </div>
@@ -57,9 +68,9 @@
         </nav>
         <div><h1 class="text-center nombre">Latin Colors</h1></div>
         <h1 id="titulo" class="titulo">After Eventos</h1>
-        <button id="boton-carrito"><i class="fas fa-shopping-cart"></i><span id="contadorCarrito">0</span></button>
-     </header>
-     <!--seccion del carrito -->
+        
+     </header> 
+     seccion del carrito
      <select id="filtroTalle">
         <option value="all">Todos</option>
         <option value="L">Large</option>
@@ -72,18 +83,18 @@
             <h3>Carrito</h3>
             <button id="carritoCerrar"><i class="fas fa-times-circle"></i></button>
             <div id="carrito-contenedor">
-                <!-- <div class="productoEnCarrito">
+                <div class="productoEnCarrito">
                     <p>Buzo 1</p>
                     <p>Precio: $1200</p>
                     <button class="boton-eliminar"><i class="fas fa-trash-alt"></i></button>
-                </div> -->
+                </div>
             </div>
             <p class="precioProducto">Precio total: $<span id="precioTotal">0</span></p>
             <button id="vaciar-carrito" class="boton-agregar">Vaciar carrito</button>
         </div>
     </div>
 
-     <!--seccion del carrusel -->
+seccion del carrusel 
     <div class="contenedor">
         <div class="carusel">
             <div class="carusel__contenedor">
