se personaliza registro

--- a/back-project/config.html
+++ b/back-project/config.html
@@ -28,7 +28,9 @@
                                     <div class="configuracion">
                                         <div class="estadisticas"></div>
                                         <a class="navbar-brand text-light" href="estadisticas.html">Estadisticas</a>
+
                                     </div>
+                                    <a class="navbar-brand text-light text-center" href="../login.html">Salir</a>
         </nav>
     </header>
 
