--- a/register.html
+++ b/register.html
@@ -18,21 +18,29 @@
       zona de logueo -->
         <div class="login-box">
             <img src="./back-project/img/logo.png" class="avatar" alt="logo de una siuleta de un rostro de mujeres con muchos colores">
-            <h1>Iniciar Sesión</h1>
+            <h1>Registrar</h1>
             <form>
 
               <label>Usuario
               <input type="text" placeholder="Enter Username" id="usuario">
             </label>
+            
+            <label>Email
+              <input type="email" placeholder="Correo" id="usuario">
+            </label>
+
 
               <label>Contraseña
 <input type="password" placeholder="Enter Password" id="clave">
             </label>
 
-              <input class="btn-cuenta" type="button" value="Login" onclick="verificar()" >
+            <label>Confirmar contraseña
+              <input type="password" placeholder="Enter Password" id="clave">
+                          </label>
 
-              <a href="#">Olvidastes la Clave</a><br>
-              <a href="register.html">¿No tienes cuenta?</a>
+              <input class="btn-cuenta" type="button" value="Login" onclick="" >
+
+              <a  class="" href="login.html">Ya tienes cuenta?</a>
             </form>
           </div>
           <!-- zona de registro -->
