--- a/back-project/index.html
+++ b/back-project/index.html
@@ -7,6 +7,7 @@
     <title>Home</title>
     <link rel="stylesheet" href="Style.css">
     <link rel="stylesheet" href="../Style.css">
+    <script src="https://kit.fontawesome.com/df59baf6b8.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
@@ -44,7 +45,7 @@
                 <a class="nav-link text-light" href="#">Tutoriales</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Nosotros</a>
+                <a class="nav-link text-light" href="./../login.html">Salir</a>
               </li>
             </ul>
           </div>
