--- a/usuarios.html
+++ b/usuarios.html
@@ -30,8 +30,8 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-              <a class="navbar-brand" href="index.html" id="logo"></a>
-              <a class="navbar-brand text-light" href="#">Inicio</a>
+              <a class="navbar-brand" href="./back-project/index.html" id="logo"></a>
+              <a class="navbar-brand text-light" href="back-project/index.html">Inicio</a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
