se crea registro y se personaliza

--- a/register.html
+++ b/register.html
@@ -38,7 +38,7 @@
               <input type="password" placeholder="Enter Password" id="clave">
                           </label>
 
-              <input class="btn-cuenta" type="button" value="Login" onclick="" >
+              <input class="btn-cuenta" type="button" value="Login" onclick="register()" >
 
               <a  class="" href="login.html">Ya tienes cuenta?</a>
             </form>
